# kredol

./: Cargo.toml  data.txt  test.blend  torun.txt
src/: drawableobject.rs  main.rs  simplescene.rs
