[package]

name = "kordom"
version = "0.0.1"
authors = ["kmcguire <kmcg3413@gmail.com>"]

[dependencies.glutin] git = "https://github.com/tomaka/glutin.git"
[dependencies.glium] git = "https://github.com/tomaka/glium"
[dependencies.glium_macros] git = "https://github.com/tomaka/glium"
[dependencies.cgmath] git = "https://github.com/bjz/cgmath-rs"